--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="bg-white rounded-xl shadow-md p-3 text-center persian-numbers">
-      <h3 id="portfolio-title" class="text-xl font-extrabold text-purple-800 mb-2 drop-shadow">دارایی طلای آبشده</h3>
+      <h3 id="portfolio-title" class="text-xl font-extrabold text-purple-800 mb-2 drop-shadow">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
     </section>
 
@@ -51,7 +51,7 @@
     <section id="crypto-box" class="bg-white rounded-xl shadow-md p-3 text-center text-black persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
-    <section class="bg-white rounded-xl shadow-md p-3 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-md p-3 text-center">
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white drop-shadow">...</p>
     </section>
 
