--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         const getColor = (change) => change > 0 ? 'green' : change < 0 ? 'red' : 'black';
 
         animateElement("crypto-box", `
-          <div class="text-xl font-extrabold drop-shadow text-purple-800">رمزارزها❇️</div>
+          <div class="text-xl font-extrabold drop-shadow text-purple-800">❇️رمزارزها</div>
           <div class="space-y-1">
              <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: $${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
              <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: $${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
@@ -152,7 +152,7 @@
           const totalGoldValue = ((myGoldGrams * 750) / 750) * commision;
           const Goldpr = ((goldPrice - avgGoldPrice) / avgGoldPrice) * 100;
 
-          document.getElementById("portfolio-title").innerText = `طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
+          document.getElementById("portfolio-title").innerText = `❇️طلای آبشده (${toPersianNumber(myGoldGrams.toLocaleString())} گرم)`;
           animateElement("portfolio-value", toPersianNumber(Math.floor(totalGoldValue).toLocaleString()));
 
           const goldprText = Goldpr < 0
@@ -197,7 +197,7 @@
                     animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
 
                     animateElement("profit-box", `
-                          <div class="text-xl font-extrabold drop-shadow text-purple-800">صندوق عیار (${toPersianNumber(ayarUnits.toLocaleString())} واحد)</div>
+                          <div class="text-xl font-extrabold drop-shadow text-purple-800">❇️صندوق عیار (${toPersianNumber(ayarUnits.toLocaleString())} واحد)</div>
                           <div class="text-2xl font-extrabold drop-shadow text-black mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
