--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </style>
 </head>
 <body class="bg-yellow-500 text-gray-800">
+  <span class="material-symbols-outlined">view_cozy</span>
   <main class="max-w-xl mx-auto p-3 space-y-3">
     <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
