--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>پورتفوی دارایی</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=view_cozy" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <style>
     * {
       font-family: 'Vazirmatn', sans-serif !important;
@@ -116,7 +116,7 @@
 
         animateElement("crypto-box", `
         <div class="text-xl font-extrabold drop-shadow text-purple-800 flex items-center gap-2">
-           <span class="material-symbols-outlined text-purple-800 text-2xl">view_cozy</span>
+        <span class="material-symbols-outlined text-2xl">view_cozy</span>
            رمزارزها
         </div>
         <div class="space-y-2">
