--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>پورتفوی دارایی</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <style>
     * {
       font-family: 'Vazirmatn', sans-serif !important;
@@ -25,7 +24,6 @@
   </style>
 </head>
 <body class="bg-yellow-500 text-gray-800">
-  <span class="material-symbols-outlined">view_cozy</span>
   <main class="max-w-xl mx-auto p-3 space-y-3">
     <section class="bg-purple-800 rounded-xl shadow-md p-2 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
@@ -115,11 +113,8 @@
         const getColor = (change) => change > 0 ? 'green' : change < 0 ? 'red' : 'black';
 
         animateElement("crypto-box", `
-        <div class="text-xl font-extrabold drop-shadow text-purple-800 flex items-center gap-2">
-        <span class="material-symbols-outlined text-2xl">view_cozy</span>
-           رمزارزها
-        </div>
-        <div class="space-y-2">
+          <div class="text-xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
+          <div class="space-y-2 mt-3 font-bold">
              <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: $${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
              <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: $${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
              <div style="color:${getColor(filecoin.usd_24h_change)}">FIL: $${toPersianNumber(filecoin.usd.toLocaleString())} = $${toPersianNumber(film.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }))} | ${toPersianNumber(Math.floor(filpr).toLocaleString())}</div>
