--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
     </section>
     <section class="bg-white rounded-xl shadow-md p-4 text-center">
-      <div class="text-base font-bold space-y-2 persian-numbers">
+      <div class="text-lg font-bold space-y-2 persian-numbers">
         <div id="usd-box">دلار: ...</div>
         <div id="usdt-box">تتر: ...</div>
         <div id="gold18-box">طلای ۱۸ عیار: ...</div>
