--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                  ? `${toPersianNumber(Math.abs(Goldpr).toFixed(2))}-`
                  : toPersianNumber(Goldpr.toFixed(2));
 
-          const existingAvgGoldPriceRow = document.querySelector("#portfolio-value + .text-sm");
+          const existingAvgGoldPriceRow = document.querySelector("#portfolio-value + .text-base");
           if (existingAvgGoldPriceRow) {
               existingAvgGoldPriceRow.remove();
           }
