--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </section>
 
     <section class="bg-white rounded-xl shadow-md p-4 text-center persian-numbers">
-      <h3 id="portfolio-title" class="text-xl font-extrabold text-purple-800 mb-2 drop-shadow">طلای آبشده</h3>
+      <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
     </section>
 
@@ -113,7 +113,7 @@
         const getColor = (change) => change > 0 ? 'green' : change < 0 ? 'red' : 'black';
 
         animateElement("crypto-box", `
-          <div class="text-xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
+          <div class="text-2xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
           <div class="space-y-2 mt-3 text-lg font-bold">
              <div style="color:${getColor(bitcoin.usd_24h_change)}">BTC: $${toPersianNumber(bitcoin.usd.toLocaleString())} = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}</div>
              <div style="color:${getColor(ethereum.usd_24h_change)}">ETH: $${toPersianNumber(ethereum.usd.toLocaleString())} = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}</div>
@@ -197,7 +197,7 @@
                     animateElement("gold-amount", toPersianNumber(Math.floor(combined).toLocaleString()));
 
                     animateElement("profit-box", `
-                          <div class="text-xl font-extrabold drop-shadow text-purple-800">صندوق عیار (${toPersianNumber(ayarUnits.toLocaleString())} واحد)</div>
+                          <div class="text-2xl font-extrabold drop-shadow text-purple-800">صندوق عیار (${toPersianNumber(ayarUnits.toLocaleString())} واحد)</div>
                           <div class="text-2xl font-extrabold drop-shadow text-black mt-2">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     `);
 
