--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <section class="bg-white rounded-xl shadow-md p-4 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow">طلای آبشده</h3>
-      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black drop-shadow">...</p>
+      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow">...</p>
     </section>
 
     <section id="profit-box" class="bg-white rounded-xl shadow-md p-4 text-center text-black mt-3 persian-numbers">
@@ -52,7 +52,7 @@
       در حال دریافت اطلاعات رمزارزها...
     </section>
     <section class="bg-purple-800 rounded-xl shadow-md p-4 text-center">
-      <p id="gold-amount" class="text-3xl font-extrabold persian-numbers text-white drop-shadow">...</p>
+      <p id="gold-amount" class="text-3xl font-extrabold persian-numbers text-white mt-3 drop-shadow">...</p>
     </section>
 
     <p id="last-update" class="text-sm text-black text-center mt-4 persian-numbers">در حال دریافت زمان...</p>
