--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="text-lg font-bold space-y-2 persian-numbers">
         <div id="usd-box">دلار: ...</div>
         <div id="usdt-box">تتر: ...</div>
+        <div id="gold-ounce-box">انس جهانی طلا: ...</div>
         <div id="gold18-box">طلای ۱۸ عیار: ...</div>
         <div id="fund-price-box">صندوق عیار: ...</div>
         <p id="gold-price" class="hidden"></p>
@@ -141,6 +142,12 @@
         if (usd) {
           const color = usd.change_value > 0 ? 'green' : usd.change_value < 0 ? 'red' : 'black';
           animateElement("usd-box", `<span style="color:${color}">دلار: ${toPersianNumber(usd.price.toLocaleString())} (${toPersianNumber(Math.abs(usd.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(usd.change_percent.toFixed(2)))}%)</span>`);
+          const ounceGold = data.gold.find(i => i.symbol === "OZ_GOLD");
+          if (ounceGold) {
+             const ozColor = ounceGold.change_value > 0 ? 'green' : ounceGold.change_value < 0 ? 'red' : 'black';
+             const ounceHtml = `<div id="ounce-box" style="color:${ozColor}">انس جهانی طلا: ${toPersianNumber(ounceGold.price.toLocaleString())} (${toPersianNumber(Math.abs(ounceGold.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(ounceGold.change_percent.toFixed(2)))}%)</div>`;
+             document.getElementById("usdt-box").insertAdjacentHTML("afterend", ounceHtml);
+          }
         }
 
         if (gold18) {
