--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           const ounceGold = data.gold.find(i => i.symbol === "XAUUSD");
           if (ounceGold) {
              const ozColor = ounceGold.change_value > 0 ? 'green' : ounceGold.change_value < 0 ? 'red' : 'black';
-             const ounceHtml = `<div id="ounce-box" style="color:${ozColor}">انس جهانی طلا: ${$toPersianNumber(ounceGold.price.toLocaleString())} (${$toPersianNumber(Math.abs(ounceGold.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(ounceGold.change_percent.toFixed(2)))}%)</div>`;
+             const ounceHtml = `<div id="ounce-box" style="color:${ozColor}">انس جهانی طلا: $${toPersianNumber(ounceGold.price.toLocaleString())} ($${toPersianNumber(Math.abs(ounceGold.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(ounceGold.change_percent.toFixed(2)))}%)</div>`;
              document.getElementById("usdt-box").insertAdjacentHTML("afterend", ounceHtml);
           }
         }
