--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
           <div class="text-2xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
           <div class="space-y-2 mt-5 text-lg font-bold">
             <div style="color:${getColor(bitcoin.usd_24h_change)}">
-               BTC: $${toPersianNumber(bitcoin.usd.toLocaleString())}
-               (${toPersianNumber(Math.abs(bitcoin.usd_24h_change.toFixed(2)))}%)
+               BTC: $${toPersianNumber(bitcoin.usd.toFixed(0).toLocaleString())}
+               (%${toPersianNumber(Math.abs(bitcoin.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}
             </div>
             <div style="color:${getColor(ethereum.usd_24h_change)}">
-               ETH: $${toPersianNumber(ethereum.usd.toLocaleString())}
-               (${toPersianNumber(Math.abs(ethereum.usd_24h_change.toFixed(2)))}%)
+               ETH: $${toPersianNumber(ethereum.usd.toFixed(0).toLocaleString())}
+               (%${toPersianNumber(Math.abs(ethereum.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}
             </div>
             <div style="color:${getColor(filecoin.usd_24h_change)}">
                FIL: $${toPersianNumber(filecoin.usd.toLocaleString())}
-               (${toPersianNumber(Math.abs(filecoin.usd_24h_change.toFixed(2)))}%)
+               (%${toPersianNumber(Math.abs(filecoin.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(film.toLocaleString('en-US', { minimumFractionDigits: 2, maximumFractionDigits: 2 }))} | ${toPersianNumber(Math.floor(filpr).toLocaleString())}
             </div>
             <p class="text-2xl font-extrabold persian-numbers text-black drop-shadow mt-5">${toPersianNumber(totalIrt.toLocaleString())}</p>
