--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
           <div class="text-2xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
           <div class="space-y-2 mt-5 text-lg font-bold">
             <div style="color:${getColor(bitcoin.usd_24h_change)}">
-               BTC: $${toPersianNumber(bitcoin.usd.toLocaleString().toFixed(0))}
+               BTC: $${toPersianNumber(parseInt(bitcoin.usd).toLocaleString())}
                (%${toPersianNumber(Math.abs(bitcoin.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}
             </div>
             <div style="color:${getColor(ethereum.usd_24h_change)}">
-               ETH: $${toPersianNumber(ethereum.usd.toLocaleString().toFixed(0))}
+               ETH: $${toPersianNumber(parseInt(ethereum.usd).toLocaleString())}
                (%${toPersianNumber(Math.abs(ethereum.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}
             </div>
