--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                     document.querySelector("#profit-box").insertAdjacentHTML(
                        "beforeend",
-                       `<div class="text-base font-bold mt-3 persian-numbers ${rowColorClass} p-1 rounded">
+                       `<div class="text-lg font-bold mt-3 persian-numbers ${rowColorClass} p-1 rounded">
                             ${formattedAyarMoney} (${ayarprText})
                         </div>`
                     );
