--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
     </section>
     <section class="bg-white rounded-xl shadow-md p-4 text-center">
-      <div class="text-lg font-bold space-y-2 persian-numbers">
+      <div class="text-lg font-bold space-y-2 persian-numbers drop-shadow-lg">
         <div id="usd-box">دلار: ...</div>
         <div id="usdt-box">تتر: ...</div>
         <div id="gold18-box">طلای ۱۸ عیار: ...</div>
@@ -114,7 +114,7 @@
 
         animateElement("crypto-box", `
           <div class="text-2xl font-extrabold drop-shadow text-purple-800">رمزارزها</div>
-          <div class="space-y-2 mt-5 text-lg font-bold">
+          <div class="space-y-2 mt-5 text-lg font-bold drop-shadow-lg">
             <div style="color:${getColor(bitcoin.usd_24h_change)}">
                BTC: $${toPersianNumber(parseInt(bitcoin.usd).toLocaleString())}
                (%${toPersianNumber(Math.abs(bitcoin.usd_24h_change.toFixed(2)))})
@@ -192,7 +192,7 @@
          // حالا سطر جدید را اضافه کنید
          document.querySelector("#portfolio-value").insertAdjacentHTML(
            "afterend",
-           `<div class="text-base font-bold text-purple-800 mt-3 persian-numbers">
+           `<div class="text-base font-bold text-purple-800 mt-3 persian-numbers drop-shadow-base">
                میانگین قیمت خرید: ${toPersianNumber(Math.floor(avgGoldPrice).toLocaleString())} 
                (${goldprText}%)
            </div>`
