--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </head>
 <body class="bg-yellow-500 text-gray-800">
   <main class="max-w-xl mx-auto p-4 space-y-5">
-    <section class="bg-purple-800 rounded-xl shadow-lg p-3 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-xl p-3 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
     </section>
-    <section class="bg-white rounded-xl shadow-lg p-4 text-center">
+    <section class="bg-white rounded-xl shadow-xl p-4 text-center">
       <div class="text-lg font-bold space-y-2 persian-numbers drop-shadow-lg">
         <div id="usd-box">دلار: ...</div>
         <div id="usdt-box">تتر: ...</div>
@@ -39,19 +39,19 @@
       </div>
     </section>
 
-    <section class="bg-white rounded-xl shadow-lg p-4 text-center persian-numbers">
+    <section class="bg-white rounded-xl shadow-xl p-4 text-center persian-numbers">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">...</p>
     </section>
 
-    <section id="profit-box" class="bg-white rounded-xl shadow-lg p-4 text-center text-black mt-3 persian-numbers">
+    <section id="profit-box" class="bg-white rounded-xl shadow-xl p-4 text-center text-black mt-3 persian-numbers">
       در حال محاسبه سود/زیان...
     </section>
 
-    <section id="crypto-box" class="bg-white rounded-xl shadow-lg p-4 text-center text-black persian-numbers">
+    <section id="crypto-box" class="bg-white rounded-xl shadow-xl p-4 text-center text-black persian-numbers">
       در حال دریافت اطلاعات رمزارزها...
     </section>
-    <section class="bg-purple-800 rounded-xl shadow-lg p-4 text-center">
+    <section class="bg-purple-800 rounded-xl shadow-xl p-4 text-center">
       <p id="gold-amount" class="text-2xl font-extrabold persian-numbers text-white mt-1 drop-shadow-lg">...</p>
     </section>
 
