--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
   </style>
 </head>
-<body class="bg-yellow-400 text-gray-800">
+<body class="bg-gradient-to-br from-yellow-300 via-yellow-400 to-yellow-500 text-gray-800 min-h-screen grainy-bg">
   <main class="max-w-xl mx-auto p-3 space-y-5">
     <section class="bg-purple-800 rounded-xl shadow-xl p-3 text-center">
        <button onclick="fetchData()" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
