--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                           <div class="text-2xl font-extrabold drop-shadow-lg text-black mt-4">${toPersianNumber(Math.floor(result).toLocaleString())}</div>
                     <span id="combined-value" style="display:none;"></span>
                     <script>
+                        const combined = totalGoldValue + result + totalIrt;
   // قرار دادن مقدار combined در span
                         document.getElementById("combined-value").textContent = combined;
                      </script>
