--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
       (100 * 6850000)
     ) / myGoldGrams;
 
-    const btcAmount = 0.04468913;
-    const ethAmount = 0.3754664;
+    const btcAmount = 0;
+    const ethAmount = 0;
     const filAmount = 8.2325135;
 
     function toPersianNumber(input) {
