--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                (%${toPersianNumber(Math.abs(bitcoin.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(btcm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(btcpr).toLocaleString())}
             </div>
-            //<div style="color:${getColor(ethereum.usd_24h_change)}">
+            <div style="color:${getColor(ethereum.usd_24h_change)}" style="display: none;">
                ETH: $${toPersianNumber(parseInt(ethereum.usd).toLocaleString())}
                (%${toPersianNumber(Math.abs(ethereum.usd_24h_change.toFixed(2)))})
                = $${toPersianNumber(ethm.toLocaleString('en-US', { minimumFractionDigits: 0, maximumFractionDigits: 0 }))} | ${toPersianNumber(Math.floor(ethpr).toLocaleString())}
