--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
                 const ayarmoney = ((ayar.pc - avgayarPrice) * ayarUnits) / 10;
             
                 if (ayar && ayar.pc) {
-                    const result = ayarUnits * (ayar.pc / 10);
+                    const unitfee = ((ayarUnits * (ayar.pc / 10)) * 0.0025) / 100;
+                    const result = (ayarUnits * (ayar.pc / 10)) - unitfee;
                     const combined = totalGoldValue + result + totalIrt;
                     const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
 
