--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       در حال دریافت اطلاعات رمزارزها...
     </section>
 
-    <section id="cash-box" class="bg-blue-700 rounded-xl shadow-2xl p-3 text-center text-white persian-numbers">
+    <section id="cash-box" class="bg-white rounded-xl shadow-2xl p-3 text-center text-blue persian-numbers">
           نقدی: <span id="cash-amount"></span>
     </section>
 
@@ -64,7 +64,7 @@
   </main>
 
   <script>
-    const cashAmount = 2365264;
+    const cashAmount = 5221957071;
     const myGoldGrams = 442.664;
     const ayarUnits = 20609;
     const avgayarPrice = 189467;
