--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </main>
 
   <script>
-    const cashAmount = (5211957070) / 10;
+    const cashAmount = 521195707;
     const myGoldGrams = 442.664;
     const ayarUnits = 20609;
     const avgayarPrice = 189467;
