--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             
                 if (ayar && ayar.pc) {
                     const unitfee = ((ayarUnits * (ayar.pc / 10)) * 0.0125) / 100;
-                    const result = (ayarUnits * (ayar.pc / 10)) - unitfee;
+                    const result = (ayarUnits * (ayar.pc / 10));
                     const combined = totalGoldValue + result + totalIrt + cashAmount;
                     const color = ayar.pcp > 0 ? 'green' : ayar.pcp < 0 ? 'red' : 'black';
 
