--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
   </main>
 
   <script>
-    const cashAmount = 201209790;
+    const cashAmount = 116037;
     const myGoldGrams = 442.664;
-    const ayarUnits = 38353;
-    const avgayarPrice = 185342;
+    const ayarUnits = 49367;
+    const avgayarPrice = 184796;
     const avgGoldPrice = (
       (127.790 * 2312000) +
       (40.524 * 3810000) +
