--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </main>
 
   <script>
-    const cashAmount = 116037;
+    const cashAmount = 2678347;
     const myGoldGrams = 442.664;
     const ayarUnits = 49367;
     const avgayarPrice = 184796;
