--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
   </main>
 
   <script>
-    const cashAmount = 744464918;
+    const cashAmount = 11726;
     const myGoldGrams = 442.664;
-    const ayarUnits = 9574;
-    const avgayarPrice = 209141;
+    const ayarUnits = 45912;
+    const avgayarPrice = 205955;
     const avgGoldPrice = (
       (127.790 * 2312000) +
       (40.524 * 3810000) +
