--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                 document.getElementById("usdt-box").insertAdjacentHTML("afterend", ounceHtml);
              }
           }
-          const goldvalue = ((ounceGold * usd) / 31.1) / 0.75 ;
-          const goldbubble = ((gold18 - goldvalue) / goldvalue) * 100 ; 
+          const goldvalue = ((ounceGold.price * usd.price) / 31.1) / 0.75;
+          const goldbubble = ((gold18.price - goldvalue) / goldvalue) * 100;
         }
         
         if (gold18) {
@@ -247,7 +247,7 @@
                  console.error("خطا در دریافت اطلاعات صندوق:", err);
                  animateElement("profit-box", "خطا در دریافت قیمت صندوق");
           }
-          document.getElementById("gold-box").innerText = toPersianNumber(goldbubble.toLocaleString());
+          document.getElementById("gold-box").innerHTML = `درصد حباب طلای ۱۸ عیار: <span id="goldbubble">${toPersianNumber(goldbubble.toFixed(2))}</span>%`;
           const now = new Date();
           const formattedDate = toPersianNumber(now.toLocaleDateString("fa-IR"));
           const formattedTime = toPersianNumber(now.toLocaleTimeString("fa-IR").replace(/:\d+$/, ''));
