--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </section>
 
     <section id="cash-box" class="bg-blue-800 rounded-xl shadow-2xl p-2 text-center text-white persian-numbers">
-          نقدی: <span id="cash-amount"></span>
+        درصد حباب طلا: <span id="cash-amount"></span>
     </section>
 
     <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
